src/objects/Vendor_Master__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_New__c</fullName>
        <label>Cost</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cost (Not Used)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description_EN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Description EN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description_FR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Description FR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Import_Successful__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Import Successful</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Update_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Update Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Imported_Date__c</fullName>
        <label>Last Imported Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Vendor_Masters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mfg_Num__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mfg Num</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Cost_New__c</fullName>
        <label>Other Cost</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Cost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Cost (Not Used)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Price_New__c</fullName>
        <label>Other Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Price (Not Used)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Part_Num__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Part Num</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Vendor_Master_Identifier__c</fullName>
        <label>Partner Vendor Master Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pkg_Qty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pkg Qty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price_File_Location_URL__c</fullName>
        <label>Price File Location URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_New__c</fullName>
        <label>Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Price (Not Used)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price_File_Import_Status__c</fullName>
        <label>Price File Import Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Queued for import</fullName>
                </value>
                <value>
                    <fullName>Import in progress</fullName>
                </value>
                <value>
                    <fullName>Failed to import</fullName>
                </value>
                <value>
                    <fullName>Review import</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Replaced_By__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Replaced By</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Replaces__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Replaces</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SKU_Num__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SKU Num</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <label>Vendor Price File Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Blackpurl_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Blackpurl Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Is_Vendor__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vendor Masters</relationshipLabel>
        <relationshipName>Vendor_Masters</relationshipName>
        <type>Lookup</type>
	</fields>
	<fields>
        <fullName>Vendor_Master_Type__c</fullName>
        <label>Vendor Master Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BRP Parts Master</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Vendor Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Is_Update_Available__c</columns>
        <columns>Partner_Vendor_Master_Identifier__c</columns>
        <columns>Vendor_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VM-{00000000}</displayFormat>
        <label>Vendor Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>